[package]
name = "spike"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.10.0"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
thiserror = "2.0.12"
chrono = { version = "0.4", features = ["serde"] } 
reqwest = { version = "0.12.15", features = ["json", "__tls"] }
clap = { version = "4.5.32", features = ["derive"] }